# advent-of-code

./: CMakeLists.txt
01/: CMakeLists.txt  main.c
lib/: CMakeLists.txt  io.c  string_utils.h
libs/: CMakeLists.txt
libs/io/: CMakeLists.txt  io.h
libs/string_utils/: CMakeLists.txt  string_utils.c  string_utils.h
src/: CMakeLists.txt
src/01/: main.c
src/02/: main.c
